[package]
name = "solana-storage"
version = "0.1.0"
edition = "2021"

[lib]
# Required for Solana smart contracts to compile to BPF/SBF target
crate-type = ["cdylib", "lib"]

[dependencies]
# Using v1.18 to ensure compatibility with the current stable Solana toolchain
solana-program = "1.18" 

# Pinning to v0.3.1 to avoid Rust Edition 2024 requirements in newer versions
constant_time_eq = "=0.3.1" 

# Locked to v1.5.5 to maintain 'digest' feature support while staying on Edition 2021
blake3 = "=1.5.5"